[project]
name = "ai-agent-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "euriai[langchain,langgraph]>=1.0.32",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.11",
    "langchain-openai>=1.1.9",
    "langgraph>=1.0.8",
    "requests>=2.32.5",
    "youtube-search>=2.2.0",
    "youtube-search-python>=1.6.6",
]
